# Corvus-MFG-DEBRIEF-V2-LEAN-MVP-

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  product_task.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/analysis/: __init__.py  owner_questions.py  risk_rules.py  schedule_impact.py
app/api/: __init__.py  routes.py
app/ingest/: __init__.py  csv_loader.py  mock_mes_socket.py  upload_store.py  validators.py
app/llm/: __init__.py  brief_prompt.py  brief_writer.py
app/models/: brief.py  mes.py  production.py  risk.py
app/output/: __init__.py  markdown_report.py  slack_mock.py
docs/: architecture.md  sprint_scope.md
frontend/: README.md
responsibilties/: README.md  ava-backend-lead.md  ethan-frontend-engineer.md  jordan-business-process-lead.md  lena-integrations-output-engineer.md  marcus-risk-logic-engineer.md  moses-product-lead.md  priya-llm-prompt-engineer.md
samples/: README.md  production_status.csv
samples/mock_mes/: manufacturing_log.csv  operation_updates.csv  quality_holds.csv  receiving_queue.csv  work_orders.csv
scripts/: README.md  ingest_mock_mes.py
tests/: README.md  test_mock_mes_socket.py  test_scaffold.py  test_upload_api.py  test_upload_store.py
